...
          },
        ),
        const SizedBox(width: 16),
        SettingsGearMenu(character: characterFile),
        Builder(
          builder: (context) => IconButton(
            key: const Key('appbar-end-drawer'),
            icon: const Icon(Icons.menu),
            onPressed: () => Scaffold.of(context).openEndDrawer(),
          ),
        ),
      ],
      actionsPadding: const EdgeInsets.only(right: 16),
...
