...
    "label": "Resolution"
  },
  "tileVideoDuration": {
    "label": "Duration"
  },
  "tileTtsVoice": {
    "label": "Voice"
  },
  "tileTtsLanguage": {
    "label": "Language"
  },
  "tileNsfw": {
    "label": "NSFW / Unlimited"
...
