...
    return Scaffold(
      backgroundColor: Theme.of(context).drawerTheme.backgroundColor,
      appBar: AppBar(
        elevation: 1,
        backgroundColor: Theme.of(context).colorScheme.surface,
        title: TextButton.icon(
          key: const Key('drawer-persona-button'),
          onPressed: () {
            Navigator.of(context, rootNavigator: true).pop();
            unawaited(NavigationService().showPersonasDialog());
          },
          icon: const Icon(Icons.person),
          label: Text(
...
