...
      appBar: AppBar(
        title: Text(t.editor.nodesRawEditorPage.editNodesJsonTitle),
        actions: [
          Padding(
            padding: const EdgeInsets.only(right: 8),
            child: TextButton(
              key: const Key('nodes-raw-editor-save-button'),
              onPressed: _onSave,
              child: Text(t.common.actions.save),
            ),
          ),
        ],
      ),
...
